--- a/components/AnimeDiv/AnimeDiv.module.scss
+++ b/components/AnimeDiv/AnimeDiv.module.scss
@@ -37,3 +37,12 @@
 .lower {
   color: red;
 }
+
+
+.fanCount {
+  font-size: 16px;
+  padding: 5px;
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: transparent;
+}
